stage latest readme and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask==1.0.2
 future==0.17.1
 googleapis-common-protos==1.5.8
 grpcio==1.19.0
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
